tdf#123834 OOXML import: line chart has gaps if the cell content is string

With this patch, cells with string content will be interpreted as zero values in a line charts instead of NaN values. So they will be
drawed as a zero value instead of gap.

Change-Id: I0ba2cb46ee45427e10d025183c21f91737205798